Opened 9 years ago

Closed 9 years ago

#4621 closed defect (fixed)

Unable to decode TearsOfSteel_4K_24fps_9500kbps_2aud_9subs.mkv

Reported by: Artem S. Tashkinov Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: hevc regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug: try to play/use/decode http://trailers.divx.com/hevc/TearsOfSteel_4K_24fps_9500kbps_2aud_9subs.mkv

How to reproduce:

$ ffplay *mkv
ffplay version 2.7 Copyright (c) 2003-2015 the FFmpeg developers
  built with gcc 4.7.4 (GCC) (birdie)
  configuration: --disable-static --enable-nonfree --enable-avfilter --enable-shared --enable-gpl --enable-postproc --enable-pthreads --enable-libspeex --enable-libmp3lame --enable-libx264 --enable-libxvid --enable-libopus --enable-libopenjpeg --disable-debug --disable-doc --enable-libpulse --extra-cflags='-march=native' --extra-ldflags='-Wl,-O1 -Wl,--hash-style=gnu -Wl,--enable-new-dtags' --enable-version3 --enable-libvorbis --disable-libfaac --enable-libfdk-aac --enable-x11grab --enable-gnutls --enable-libfreetype --enable-libx265
  libavutil      54. 27.100 / 54. 27.100
  libavcodec     56. 41.100 / 56. 41.100
  libavformat    56. 36.100 / 56. 36.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 16.101 /  5. 16.101
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  2.100 /  1.  2.100
  libpostproc    53.  3.100 / 53.  3.100
[hevc @ 0xaf002e80] nb_cpb 0 invalidKB vq=    0KB sq=    0B f=0/0
[hevc @ 0xaf002e80] Overread VPS by 8 bits
[hevc @ 0xaf002e80] VPS 0 does not exist
[hevc @ 0xaf002e80] SPS 0 does not exist.
[hevc @ 0xaf002e80] nb_cpb 0 invalid
[hevc @ 0xaf002e80] Overread VPS by 8 bits
[hevc @ 0xaf002e80] VPS 0 does not exist
[hevc @ 0xaf002e80] SPS 0 does not exist.
[hevc @ 0xaf002e80] PPS id out of range: 0
[hevc @ 0xaf002e80] Error parsing NAL unit #5.
[hevc @ 0xaf002e80] PPS id out of range: 0
[hevc @ 0xaf002e80] Error parsing NAL unit #2.
[hevc @ 0xaf002e80] PPS id out of range: 0
[hevc @ 0xaf002e80] Error parsing NAL unit #2.
[hevc @ 0xaf002e80] PPS id out of range: 0
[hevc @ 0xaf002e80] Error parsing NAL unit #2.
...

Attachments (1)

TearsOfSteel_4K_24fps_9500kbps_2aud_9subs_cut.mkv (2.4 MB ) - added by Carl Eugen Hoyos 9 years ago.

Change History (5)

comment:1 by Carl Eugen Hoyos, 9 years ago

Keywords: hevc added
Priority: criticalnormal

Please test current FFmpeg git head and please test ffmpeg (the application) to make this a valid ticket.

comment:2 by Artem S. Tashkinov, 9 years ago

$ LD_LIBRARY_PATH=/tmp/ff/lib ./ffmpeg -i TearsOfSteel_4K_24fps_9500kbps_2aud_9subs.mkv out.3gp
ffmpeg version git-2015-06-14-ad072a1 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.7.4 (GCC) (birdie)
  configuration: --disable-static --enable-nonfree --enable-avfilter --enable-shared --enable-gpl --enable-postproc --enable-pthreads --enable-libspeex --enable-libmp3lame --enable-libx264 --enable-libxvid --enable-libopus --enable-libopenjpeg --disable-debug --disable-doc --enable-libpulse --extra-cflags='-march=native' --extra-ldflags='-Wl,-O1 -Wl,--hash-style=gnu -Wl,--enable-new-dtags' --enable-version3 --enable-libvorbis --disable-libfaac --enable-libfdk-aac --enable-x11grab --enable-gnutls --enable-libfreetype --enable-libx265 --prefix=/tmp/ff
  libavutil      54. 27.100 / 54. 27.100
  libavcodec     56. 41.100 / 56. 41.100
  libavformat    56. 36.100 / 56. 36.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 17.100 /  5. 17.100
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  2.100 /  1.  2.100
  libpostproc    53.  3.100 / 53.  3.100
[hevc @ 0x9dbfbc0] nb_cpb 0 invalid
[hevc @ 0x9dbfbc0] Overread VPS by 8 bits
[hevc @ 0x9dbfbc0] VPS 0 does not exist
[hevc @ 0x9dbfbc0] SPS 0 does not exist.
[hevc @ 0x9dbfbc0] nb_cpb 0 invalid
[hevc @ 0x9dbfbc0] Overread VPS by 8 bits
[hevc @ 0x9dbfbc0] VPS 0 does not exist
[hevc @ 0x9dbfbc0] SPS 0 does not exist.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #5.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[hevc @ 0x9dbfbc0] PPS id out of range: 0
[hevc @ 0x9dbfbc0] Error parsing NAL unit #2.
[matroska,webm @ 0x9dbd840] decoding for stream 0 failed
[matroska,webm @ 0x9dbd840] Could not find codec parameters for stream 0 (Video: hevc, none, 3840x2160): unspecified pixel format
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, matroska,webm, from '/tmp/TearsOfSteel_4K_24fps_9500kbps_2aud_9subs.mkv':
  Metadata:
    encoder         : libebml v1.3.0 + libmatroska v1.4.0
    creation_time   : 2013-11-11 22:10:07
  Duration: 00:12:14.06, start: 0.000000, bitrate: 10228 kb/s
    Stream #0:0: Video: hevc, none, 3840x2160, SAR 1:1 DAR 16:9, 24 fps, 24 tbr, 1k tbn, 1k tbc (default)
    Stream #0:1: Audio: aac (LC), 48000 Hz, 5.1, fltp (default)
    Stream #0:2: Audio: ac3, 48000 Hz, 5.1(side), fltp, 448 kb/s
    Stream #0:3(ger): Subtitle: subrip (default)
    Metadata:
      title           : German
    Stream #0:4(eng): Subtitle: subrip
    Metadata:
      title           : English
    Stream #0:5(spa): Subtitle: subrip
    Metadata:
      title           : Spanish
    Stream #0:6(fre): Subtitle: subrip
    Metadata:
      title           : French
    Stream #0:7(jpn): Subtitle: subrip
    Metadata:
      title           : Japanese
    Stream #0:8(dut): Subtitle: subrip
    Metadata:
      title           : Dutch
    Stream #0:9(rus): Subtitle: subrip
    Metadata:
      title           : Russian
[buffer @ 0x9ead5a0] Unable to parse option value "-1" as pixel format
    Last message repeated 1 times
[buffer @ 0x9ead5a0] Error setting option pix_fmt to value -1.
[graph 0 input from stream 0:0 @ 0x9ea41c0] Error applying options to the filter.
Error opening filters

comment:3 by Carl Eugen Hoyos, 9 years ago

Keywords: regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen

Regression since 5ec85c97 - related to tickets #3872 and #4035

by Carl Eugen Hoyos, 9 years ago

comment:4 by Michael Niedermayer, 9 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.