avcodec/hevc_ps: Only discard overread VPS if a previous is available

Fixes Ticket4621

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>